atualização readme
Atualizei o ficheiro README para refletir as alterações nas funções dos utilizadores, na utilização da base de dados e na estrutura do projeto.